static/css/base.css
/* ... */
header #dropdown-toggle-btn {
	display: none;
}

/*Scale: header*/
@media (max-width: 1000px) {
	header {
		height: 56px;
	}

	header #header-nav {
		font-size: medium;
	}
	header #header-logo {
		height: 64px;
	}

	header .navigation {
		display: none;
	}

	header #dropdown-toggle-btn {
		display: block;
		background: rgb(0, 0, 0);
		border-style: none;
		color: white;
		font-size: 36px;
	}
}

/* *************************************** */
/* Home                                    */
/* *************************************** */

.home-container {
	padding: 8px 48px 48px 64px;
}
.home-container .welcome-box .welcome-text {
	font-size: xx-large;
	font-weight: bold;
}

.home-container .welcome-box .sync {
	font-size: medium;
	font-family: monospace;
	margin-top: 5px;
	margin-bottom: 24px;
}

.home-container .welcome-box .sync::before {
	content: "// ";
	color: var(--pink);
	font-size: small;
	font-family: monospace;
}

.home-grid {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: 24px;
	word-wrap: break-word;
}

.home-grid .home-grid-container {
	height: 128px;
	border: 1px solid var(--gray);
	padding: 48px 8px 8px 24px;
	color: inherit;
	text-decoration: none;
	border-top-right-radius: 28px;
	corner-shape: bevel;
}

.home-grid .home-grid-container:hover {
	border-color: var(--blue);
}

.home-grid .home-grid-container .container-icon {
	font-size: 36px;
	color: var(--gray);
	border: 1px solid var(--gray);
	padding: 10px 20px 10px 15px;
	border-top-right-radius: 14px;
	corner-shape: bevel;
	margin-bottom: 10px;
}

.home-grid .home-grid-container .container-title {
	font-size: larger;
	font-weight: bold;
	text-transform: uppercase;
}

.home-grid .home-grid-container .container-comment {
	color: var(--gray-dark);
	font-family: monospace;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.home-grid .home-grid-container .container-comment::before {
	content: '// ';
}

#dropdown-nav {
	display: flex;
	flex-direction: column;
	gap: 16px;
	padding: 16px;
	position: absolute;
	right: calc(-1 * 300px - 32px);
	z-index: 9999;
	transition: right 0.1s;
	will-change: right;
	width: 300px;
	top: 70px;
	list-style-type: none;
	margin: 0;
}

body.dropdown-open #dropdown-nav {
	right: 0;
	transition: right 0.2s;
}

#dropdown-nav li {
	color: var(--white);
	border-top-right-radius: 14px;
	corner-shape: bevel;
	font-family: 'Bebas Neue', sans-serif;
	font-size: 20px;
	overflow: hidden;
}

#dropdown-nav li:nth-child(4n-3) {
	background: var(--purple);
}

#dropdown-nav li:nth-child(4n-2) {
	background: var(--blue);
}

#dropdown-nav li:nth-child(4n-1) {
	background: var(--red);
}

#dropdown-nav li:nth-child(4n) {
	background: var(--yellow);
}

#dropdown-nav li a {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 8px;
	padding: 12px;
	color: inherit;
	text-transform: uppercase;
	text-decoration: none;
	transition: background-color 0.1s;
}

#dropdown-nav li a:hover,
#dropdown-nav li a:focus {
	background-color: rgba(0, 0, 0, 0.2);
	transition: background-color 0.03s;
}

#dropdown-close-overlay {
	position: fixed;
	z-index: -1;
	background: rgba(0,0,0,0.4);
	background: linear-gradient(to right, rgba(0,0,0,0.4), rgba(0,0,0,0.8));
	backdrop-filter: blur(1px);
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	pointer-events: none;
	opacity: 0;
	transition: opacity 0.1s;
	will-change: opacity, z-index;
}

.dropdown-open #dropdown-close-overlay {
	pointer-events: auto;
	opacity: 1;
	z-index: 9998;
}

/*Scale home container*/
@media (max-width: 1000px){
	.home-container {
		padding: 8px;
	}

	.home-container .welcome-box .welcome-text {
		font-size: x-large;
	}

	.home-container .welcome-box .sync {
		font-size: small;
	}

	.home-grid {
		grid-template-columns: 50% 50%;
		grid-template-rows: 4fr;
		gap: 10px;
	}

	.home-grid .home-grid-container {
		padding: 20px 4px 4px 12px;
	}
	
	.home-grid .home-grid-container .container-icon {
		font-size: 24px;
		padding: 10px 20px 10px 15px;
		border-top-right-radius: 14px;
		corner-shape: bevel;
		margin-bottom: 10px;
	}

	.home-grid .home-grid-container .container-title {
		font-size: medium;
	}
	.home-grid .home-grid-container .container-comment {
		font-size: smaller;
	}
}

/* *************************************** */
/* Main content container                  */
/* *************************************** */

main {
	padding: 8px;
}

main.noheader {
	margin-top: 0px !important;
	height: 100vh !important;
}

nav {
	display: block;
	margin: 16px 0;
	font-size: large;
}

nav a {
	display: inline-block;
	margin: 0 8px;
}

/* *************************************** */
/* Login page                              */
/* *************************************** */

.login-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 100%;
}

.login-logo {
	margin-top: -100px; /* move logo up a bit */
	max-height: 400px;
	max-width: 90%;
	content: url('/images/logo-light.svg');
}

@media (prefers-color-scheme: dark) {
	.login-logo {
		content: url('/images/logo-dark.svg');
	}
}

.login-button {
	display: block;
	padding: 12px 64px;
	border: solid 1px rgb(0, 0, 0);
	text-transform: uppercase;
	color: black;
	cursor: pointer;
	font-size: 1.5em;
	transition: 0.1s;
}

@media (prefers-color-scheme: dark) {
	.login-button {
			border: solid 1px white;
			color: white;
	}
}

.login-button:hover,
.login-button:focus {
	text-decoration: none;
	background-color: var(--primary);
	transition: 0.03s;
	outline: 0;
}

.login-button:active {
	border-style: inset;
}

/* *************************************** */
/* Userlist & piscine overview             */
/* *************************************** */

.userlist-header {
	display: block;
	margin: 8px 0;
}

.userlist-header select {
	padding: 4px;
	margin: 4px;
	font-size: 16px;
	border-radius: 4px;
}
/* ... */

